API improved. DI corrected. Tests extended.