@@ -1,1 +1,3 @@
 # money-transaction-backend
+
+java --add-opens=java.base/java.lang=ALL-UNNAMED -jar build\libs\money-transaction-backend-all.jar
